--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.3.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
